package edu.travelplanner.model;

public enum WeatherState {
    SUNNY,
    CLOUDY,
    RAINY,
    SNOWY
}